Removed personal details from tests

--- a/EmailTemplating.Tests/Templates/sample-email.html
+++ b/EmailTemplating.Tests/Templates/sample-email.html
@@ -4,7 +4,7 @@
 <head>
 <meta content="en-gb" http-equiv="Content-Language" />
 <meta content="text/html; charset=utf-8" http-equiv="Content-Type" />
-<title>Dear</title>
+<title>Lorem Ipsum...</title>
 <style type="text/css">
 .style1 {
 	font-family: Cambria, Cochin, Georgia, Times, "Times New Roman", serif;
@@ -15,12 +15,12 @@
 <body>
 
 <p>
-<img alt="My Sample Company" height="114" src="sample-company.png" width="699" /></p>
+<h1>Sample Email</h1>
 <p class="style1">Dear {%= name %},</p>
-<p class="style1">Please buy our amazing product. Please click our lovely
-<a href="http://www.ciseware.com/tracked?user={%= userid %}">tracked link</a>.</p>
+<p class="style1">Thanks for signing up to our email list. What about clicking this
+<a href="http://localhost/trackedLink?userId={%= userid %}">tracked link</a>.</p>
 <p class="style1">Kind regards,</p>
-<p class="style1">The boss.</p>
+<p class="style1">Sample Company.</p>
 
 </body>
 
